--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "cheerio": "^1.0.0-rc.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^4.4.1",
     "jwt-decode": "^3.1.2",
     "mongoose": "^5.11.17",
     "nodemon": "^2.0.7",
@@ -18,6 +21,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-toastify": "^7.0.3",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
